--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/edit.html
@@ -1,64 +1,111 @@
-<form th:action="@{/admin/m/ext/scoreGroup/edit.gsp}" th:object="${result}" id="editForm" class="form-horizontal" role="form" action="#" method="post">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h4 class="modal-title">修改评分组信息</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-md-12">
-				<input th:field="*{id}" type="text" hidden="true" />
-				<div class="form-group">
-					<label class="col-md-3 control-label">名 称<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input th:field="*{groupName}" placeholder="请输入评分组名称" type="text" class="form-control" />
-					</div>
+<!DOCTYPE html>
+<html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
+<div th:replace="fragments/head_admin">head</div>
+</head>
+<body>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=gconfig,child=scoreGroup)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a th:href="@{/admin/m/ext/scoreGroup/list.gsp}">评分组配置</a> <a><cite>编辑</cite></a>
+					</span>
 				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">编 码<label class="text-danger">*</label>：
-					</label>
-					<div class="col-md-7">
-						<input th:field="*{codeNum}" placeholder="请输入评分组编码" type="text" class="form-control" />
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 评分组配置
+				</blockquote>
+				<form th:action="@{/admin/m/ext/scoreGroup/edit.gsp}" th:object="${result}" id="editForm" class="layui-form" role="form" action="#" method="post">
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>编辑评分组选项</legend>
+					</fieldset>
+					<input th:field="*{id}" type="text" hidden="true" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">名 称：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input name="groupName" th:field="*{groupName}" class="layui-input" required lay-verify="groupName" placeholder="请输入选项名称" type="text" maxlength="21" />
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-md-3 control-label">描 述：</label>
-					<div class="col-md-7">
-						<textarea th:field="*{description}" rows="3" placeholder="最长140个字符" class="form-control"></textarea>
+					<div class="layui-form-item">
+						<label class="layui-form-label">编 码：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input name="codeNum" th:field="*{codeNum}" class="layui-input" required lay-verify="codeNum" value="1" min=1; max=100 placeholder="请输入选项名称" type="number" />
+						</div>
 					</div>
-				</div>
+					<div class="layui-form-item layui-form-text">
+						<label class="layui-form-label">描述：</label>
+						<div class="layui-input-block">
+							<textarea name="description" th:field="*{description}" class="layui-textarea" placeholder="请输入描述" lay-verify="description"></textarea>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit1">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">
-			<strong>提 交</strong>
-		</button>
-		<button type="button" class="btn btn-default" data-dismiss="modal">
-			<strong>关 闭</strong>
-		</button>
-	</div>
-</form>
+</body>
+<div th:replace="fragments/import_js_admin">引入js</div>
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    $(function() {
-        var rules = {
-            groupName : {
-                required : true,
-                maxlength : 20
+    var $ = layui.jquery;
+    var showImgUrl = /*[[@{/fore/common/showImage_}]]*/;
+    var form = layui.form();
+    layui.use('upload', function() {
+        url = BASE_URL + 'manage/common/uploadImage.htm';
+        tg_upload("icon", url);
+    });
+    function tg_upload(id, url) {
+        $("#" + id).after('<input id="Input'+id+'" type="text" value="" name="'+id+'" hidden="hidden">');
+        var fileName;
+        //文件上传
+        layui.upload({
+            url : url,//上传接口
+            elem : '#' + id,
+            ext : 'jpg|png|gif', //图片格式限制
+            before : function(input) {
+                layer.msg('文件上传中');
             },
-            codeNum : {
-                required : true,
-                maxlength : 20
-            },
-            description : {
-                maxlength : 140
+            success : function(res) { //上传成功后的回调
+                $("#" + id).parent().next().text("上传成功");
+                $("#Input" + id).attr("value", res.msg);
+                $("#imgShow").attr("src", showImgUrl+res.msg+'.htm');
+            }
+        });
+    }
+    //自定义验证规则
+    form.verify({
+        groupName : function(value) {
+            if (value.length < 1) {
+                return '名称不能为空！';
+            } else if (value.length > 20) {
+                return '名称最长20个字符！';
+            }
+        },
+        codeNum : function(value) {
+            if (value.length < 1) {
+                return '编码不能为空！';
+            }else if(value.length>20){
+                return '编码长度不能大于20个字符！';
+            }
+        },
+        description : function(value) {
+            if(value.length>140){
+                return '描述长度不能大于140个字符！';
             }
         }
-        var messages = {
-
-        }
-        myTable.add('commonWin', 'editForm', rules, messages);
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
     });
     /*]]>*/
 </script>
