--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/listItem.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/listItem.html
@@ -12,16 +12,16 @@
 			<div class="layui-main">
 				<!--/***** 面包屑 *****/-->
 				<div class="layui-elem-quote" style="margin-top: 10px;">
-					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">评分组配置</a> <a><cite>列表</cite></a>
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a th:href="@{/admin/m/ext/scoreGroup/list.gsp}">评分组配置</a> <a><cite>列表</cite></a>
 					</span>
 				</div>
 				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 评分组配置
+					<i class="layui-icon">&#xe60b;</i> 评分项配置
 				</blockquote>
 				<blockquote class="layui-elem-quote layui-quote-nm">
 					<div class="layui-inline">
 						<div class="layui-input-inline">
-							<a th:href="@{/admin/m/ext/scoreGroup/add.gsp}" class="layui-btn">新增评分组</a>
+							<a th:href="@{/admin/m/ext/scoreGroup/addItem.gsp}" class="layui-btn">新增评分项</a>
 						</div>
 					</div>
 				</blockquote>
@@ -29,21 +29,20 @@
 					<thead>
 						<tr>
 							<th width="40" class="text-center">#</th>
-							<th class="text-center">名称</th>
-							<th class="text-center">编码</th>
-							<th width="200" class="text-center">操作</th>
+							<th>选项名称</th>
+							<th>分值</th>
+							<th width="120" class="text-center">操作</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:if="${scoreGroupList == null or scoreGroupList.size() == 0}">
+						<tr th:if="${scoreItemList == null or scoreItemList.size() == 0}">
 							<td colspan="4" style="text-align: center;">暂时没有数据</td>
 						</tr>
-						<tr th:each="item,itemStat:${scoreGroupList}">
+						<tr th:each="item,itemStat:${scoreItemList}">
 							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
-							<td th:text="${item.groupName}" style="text-align: center;"></td>
-							<td th:text="${item.codeNum}" style="text-align: center;"></td>
-							<td><a th:href="|@{/admin/m/ext/scoreGroup/listItem_}${item.id}.gsp|" class="layui-btn layui-btn-small"><i class="layui-icon">编辑评分项</i></a><a th:href="|@{/admin/m/ext/scoreGroup/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a
-								th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+							<td th:text="${item.itemName}" style="text-align: center;"></td>
+							<td th:text="${item.score}" style="text-align: center;"></td>
+							<td><a th:href="|@{/admin/m/ext/scoreGroup/editItem_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
 						</tr>
 					</tbody>
 				</table>
@@ -56,7 +55,7 @@
 </html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-  var deleteUrl = /*[[@{/admin/m/ext/scoreGroup/delete_{id}.gsp}]]*/;
+  var deleteUrl = /*[[@{/admin/m/ext/scoreGroup/deleteItem_{id}.gsp}]]*/;
     function del(id){
         tg_deleteItem(deleteUrl.replace('{id}',id), function(){
             location.reload();
