常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/fragments/import_js.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/import_js.html
@@ -1,12 +1,32 @@
 ﻿<!--/*******底部引入js*******/-->
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    var BASE_URL = /*[[@{/}]]*/;
-    /*]]>*/
+<!-- JS Global Compulsory -->
+<script th:src="@{/template/default/_resources/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/jquery/jquery-migrate.min.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/bootstrap/js/bootstrap.min.js}"></script>
+<!-- JS Implementing Plugins -->
+<script th:src="@{/template/default/_resources/vendor/smoothScroll.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/pace/pace.min.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/jquery.parallax.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/owl-carousel2/owl.carousel.min.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/backstretch/jquery.backstretch.min.js}"></script>
+<!-- JS Page Level-->
+<script th:src="@{/template/default/_resources/js/one.app.js}"></script>
+<script th:src="@{/template/default/_resources/js/plugins/promo.js}"></script>
+<script th:src="@{/template/default/_resources/js/plugins/pace-loader.js}"></script>
+<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v1.js}"></script>
+<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v2.js}"></script>
+<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v3.js}"></script>
+<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v4.js}"></script>
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        App.init();
+        Owl2Carouselv1.initOwl2Carouselv1();
+        Owl2Carouselv2.initOwl2Carouselv2();
+        Owl2Carouselv3.initOwl2Carouselv3();
+        Owl2Carouselv4.initOwl2Carouselv4();
+    });
 </script>
-
-<script th:src="@{/template/default/_resources/js/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/template/default/_resources/js/responsive-nav.js}"></script>
-<script type="application/x-javascript">
-     addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
-</script>
+<!--[if lt IE 9]>
+  <script src="../assets/plugins/respond.js"></script>
+  <script src="../assets/plugins/html5shiv.js"></script>
+  <![endif]-->
