--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -2,30 +2,8 @@
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>图灵谷（北京）科技有限公司</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="图灵谷（北京）科技有限公司">
-<meta name="author" content="图灵谷（北京）科技有限公司">
-<link rel="shortcut icon" href="assets/favicon.ico">
-<!-- CSS Global Compulsory -->
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/bootstrap/css/bootstrap.min.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/css/app.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/css/blocks.css}">
-<!-- CSS Implementing Plugins -->
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/animate.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/line-icons/line-icons.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/font-awesome/css/font-awesome.min.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/sky-forms-pro/skyforms/css/sky-forms.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/sky-forms-pro/skyforms/custom/custom-sky-forms.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/owl-carousel2/assets/owl.carousel.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/vendor/pace/pace-flash.css}">
-<!-- CSS Thematic Theme -->
-<link rel="stylesheet" th:href="@{/template/default/_resources/css/business.style.css}">
-<link rel="stylesheet" th:href="@{/template/default/_resources/css/global.css}">
-<!-- CSS Customization -->
-<link rel="stylesheet" th:href="@{/template/default/_resources/css/custom.css}">
+<div th:replace="default/fragments/head">head</div>
 </head>
-
 <body id="body" data-spy="scroll" data-target=".one-page-header">
 	<!-- Header -->
 	<nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
@@ -364,38 +342,5 @@
 		</div>
 	</section>
 </body>
-<!-- JS Global Compulsory -->
-<script th:src="@{/template/default/_resources/vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{/template/default/_resources/vendor/jquery/jquery-migrate.min.js}"></script>
-<script th:src="@{/template/default/_resources/vendor/bootstrap/js/bootstrap.min.js}"></script>
-
-<!-- JS Implementing Plugins -->
-<script th:src="@{/template/default/_resources/vendor/smoothScroll.js}"></script>
-<script th:src="@{/template/default/_resources/vendor/pace/pace.min.js}"></script>
-<script th:src="@{/template/default/_resources/vendor/jquery.parallax.js}"></script>
-<script th:src="@{/template/default/_resources/vendor/owl-carousel2/owl.carousel.min.js}"></script>
-<script th:src="@{/template/default/_resources/vendor/backstretch/jquery.backstretch.min.js}"></script>
-
-<!-- JS Page Level-->
-<script th:src="@{/template/default/_resources/js/one.app.js}"></script>
-<script th:src="@{/template/default/_resources/js/plugins/promo.js}"></script>
-<script th:src="@{/template/default/_resources/js/plugins/pace-loader.js}"></script>
-<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v1.js}"></script>
-<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v2.js}"></script>
-<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v3.js}"></script>
-<script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v4.js}"></script>
-
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-        App.init();
-        Owl2Carouselv1.initOwl2Carouselv1();
-        Owl2Carouselv2.initOwl2Carouselv2();
-        Owl2Carouselv3.initOwl2Carouselv3();
-        Owl2Carouselv4.initOwl2Carouselv4();
-    });
-</script>
-<!--[if lt IE 9]>
-  <script src="../assets/plugins/respond.js"></script>
-  <script src="../assets/plugins/html5shiv.js"></script>
-  <![endif]-->
+<div th:replace="default/fragments/import_js">import_js</div>
 </html>
