常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/fragments/footer.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/footer.html
@@ -1,14 +1,12 @@
 <!--/*******底部版权信息等*******/-->
-<div class="container footer">
-	<div class="footer_bottom">
-		<div class="col-md-12 copy text-center">
-			<p>
-				&copy;2015-2016 图灵谷（北京）科技有限公司 <a href="http://www.turingoal.com" target="_blank"> www.turingoal.com</a>
-			</p>
-			<p>
-				<a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备15041746号-1</a>
-			</p>
-		</div>
-		<div class="clearfix"></div>
+<div class="bg-color-white">
+	<div class="container text-center g-pt-30 g-pb-30">
+		<h2 class="g-text-size-17 g-mb-10">
+			<a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备15041746号-1</a>
+		</h2>
+		<p class="g-color-gray-dark g-no-mb g-text-size-12">
+			&copy; 2017 版权所有. <a href="http://www.turingoal.com" class="g-color-primary">图灵谷（北京）科技有限公司</a>
+		</p>
+
 	</div>
 </div>
