--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -328,18 +328,8 @@
 					<h4>地址</h4> <span class="g-display-block g-color-white">北京昌平紫晶七星广场515</span></li>
 			</ul>
 		</div>
-		<!-- 版权信息 -->
-		<div class="bg-color-white">
-			<div class="container text-center g-pt-30 g-pb-30">
-				<h2 class="g-text-size-17 g-mb-10">
-					<a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备15041746号-1</a>
-				</h2>
-				<p class="g-color-gray-dark g-no-mb g-text-size-12">
-					&copy; 2017 版权所有. <a href="http://www.turingoal.com" class="g-color-primary">图灵谷（北京）科技有限公司</a>
-				</p>
-
-			</div>
-		</div>
+		<!--/*******版权信息*******/-->
+		<div th:replace="default/fragments/footer">footer</div>
 	</section>
 </body>
 <div th:replace="default/fragments/import_js">import_js</div>
