常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -7,7 +7,7 @@
 <body id="body" data-spy="scroll" data-target=".one-page-header">
 	<!--/*******导航栏*******/-->
 	<div th:replace="default/fragments/nav">head</div>
-	<!-- Promo -->
+	<!-- 幻灯片 -->
 	<section class="g-bg-dark-blue1">
 		<div class="fullscreen-static-image promo-block--cover fullheight">
 			<div class="container valign__middle">
@@ -23,11 +23,9 @@
 			</div>
 		</div>
 	</section>
-	<!-- End Promo -->
 	<!-- 主要业务 -->
 	<section id="services">
 		<div class="container content-md g-text-height-md">
-
 			<div class="row g-mb-60 text-center g-heading-v7">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="h2">
@@ -35,7 +33,6 @@
 					</h2>
 				</div>
 			</div>
-
 			<div class="row service-box-v1 service-box-v1--business equal-height-columns no-gutter">
 				<div class="col-md-3 col-sm-6">
 					<div class="service-block service-block-default equal-height-column no-margin-bottom">
@@ -92,11 +89,9 @@
 			</div>
 		</div>
 	</section>
-
 	<!-- 企业文化 -->
 	<section id="processes" class="g-bg-dark-blue1">
 		<div class="container content-md g-text-height-md">
-
 			<div class="row g-mb-60 text-center g-heading-v7">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="h2 color-light">
@@ -105,7 +100,6 @@
 					<p>"用做产品的态度做项目，用做服务的态度做产品！"</p>
 				</div>
 			</div>
-
 			<div class="row g-mb-20">
 				<div class="col-md-6 g-mb-20 steps-v1--lspace">
 					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
@@ -116,7 +110,6 @@
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-fire"></i> <img class="steps-v1__img g-rounded-50x" src="assets/img-temp/testimonials/img1.jpg" alt=""></li>
 					</ul>
 				</div>
-
 				<div class="col-md-6 steps-v1--rspace">
 					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
 						<li>
@@ -129,7 +122,6 @@
 					</ul>
 				</div>
 			</div>
-
 			<div class="row g-mb-50">
 				<div class="col-md-6 g-mb-20 steps-v1--lspace">
 					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
@@ -142,7 +134,6 @@
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-rocket"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img3.jpg" alt=""></li>
 					</ul>
 				</div>
-
 				<div class="col-md-6 steps-v1--rspace">
 					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
 						<li>
@@ -157,8 +148,7 @@
 			</div>
 		</div>
 	</section>
-
-	<!-- Pricing -->
+	<!-- 典型案例 -->
 	<section id="projects">
 		<div class="container content-md g-text-height-md">
 			<div class="row g-mb-60 text-center g-heading-v7">
@@ -169,7 +159,6 @@
 					<p>Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</p>
 				</div>
 			</div>
-
 		</div>
 		<div class="container-fluid g-text-height-md g-no-side-padding">
 			<ul class="list-unstyled owl2-carousel-v4 g-no-mb">
@@ -239,11 +228,8 @@
 				</li>
 			</ul>
 		</div>
-
 	</section>
 	<!-- End Pricing -->
-
-
 	<!-- 典型客户 -->
 	<section id="clients">
 		<div class="container content-md g-text-height-md">
