--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -12,49 +12,285 @@
 				<div class='col-md-4 banner_left'>
 					<span></span>
 				</div>
-				<div class='col-md-6 banner_right'>
-					<h1>图灵谷</h1>
-					<br />
-					<h2>领先技术，创造卓越！</h2>
-					<p>&nbsp;&nbsp;图灵谷致力于领先技术研究，科技创新，为客户提供优质的行业咨询和解决方案、先进的系统架构和高品质的系统定制化开发及优质的运维服务。</p>
-				</div>
 			</div>
 		</div>
-		<div class="main">
-			<div class="container content_bottom">
-				<div class="row">
-                    <div class='col-md-6 comment_top'>
-                        <div class="project_grid">
-                            <h3>公司动态</h3>
-                            <ul class="project_box" tg_cms:info_list="news_info,news,3">
-                                <li class="mini-post-meta"><time datetime="">
-                                        <span class="day" th:text="${#dates.day(news_info.publishTime==null?#dates.createNow():news_info.publishTime)}">25</span><span class="month" th:text="${#dates.monthName(news_info.publishTime==null?#dates.createNow():news_info.publishTime)}">7月</span>
-                                    </time></li>
-                                <li class="desc"><h5>
-                                    </h5> <span class="comment" th:text="${news_info.title}">title</span>
-                                    <p th:text="${news_info.metaDescription}">description</p></li>
-                                <div class="clearfix"></div>
-                            </ul>
-                        </div>
-                    </div>
-					<div class='col-md-6'>
-						<ul class="comment_section top_grid">
-							<li class="comment_desc"><p>"用做产品的态度做项目，用做服务的态度做产品！"</p> <br /> <span class="m_2">- <a href="#">公司宣言</a></span></li>
-							<li><i class="comment"></i></li>
-							<div class="clearfix"></div>
+	</section>
+	<!-- End Promo -->
+	<!-- 主要业务 -->
+	<section id="services">
+		<div class="container content-md g-text-height-md">
+
+			<div class="row g-mb-60 text-center g-heading-v7">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="h2">
+						<span class="g-text-height-lg">我们能做什么</span>
+					</h2>
+				</div>
+			</div>
+
+			<div class="row service-box-v1 service-box-v1--business equal-height-columns no-gutter">
+				<div class="col-md-3 col-sm-6">
+					<div class="service-block service-block-default equal-height-column no-margin-bottom">
+						<i class="icon icon-fire"></i>
+						<h2 class="heading-sm h3">信息化系统</h2>
+						<p>信息化系统高端定制开发</p>
+						<ul class="list-unstyled">
+							<li>电子政务系统</li>
+							<li>电子法务系统</li>
+							<li>在线办公（OA）</li>
+							<li>客户关系管理（CRM）</li>
 						</ul>
-						<ul class="comment_section">
-							<li class="comment_desc"><p>"领先技术，创造卓越！"</p> <br /> <span class="m_2">- <a href="#">公司理念</a></span></li>
-							<li><i class="comment"></i></li>
-							<div class="clearfix"></div>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="service-block service-block-default equal-height-column no-margin-bottom">
+						<i class="icon icon-energy"></i>
+						<h2 class="heading-sm h3">系统集成</h2>
+						<p>信息系统集成</p>
+						<ul class="list-unstyled">
+							<li>Analysis &amp; Consulting</li>
+							<li>Email Marketing</li>
+							<li>App &amp; Icon Design</li>
+							<li>Social Networking</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="service-block service-block-default equal-height-column no-margin-bottom">
+						<i class="icon icon-layers"></i>
+						<h2 class="heading-sm h3">互联网推广</h2>
+						<p>网络推广</p>
+						<ul class="list-unstyled">
+							<li>Display Advertising</li>
+							<li>App &amp; Icon Design</li>
+							<li>Analysis &amp; Consulting</li>
+							<li>Social Media</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="service-block service-block-default equal-height-column no-margin-bottom">
+						<i class="icon icon-social-youtube"></i>
+						<h2 class="heading-sm h3">自有产品</h2>
+						<p>自有产品</p>
+						<ul class="list-unstyled">
+							<li>17企航（企业管理平台）</li>
+							<li>时间沙漏（兴趣设计平台）</li>
+							<li><a href="https://www.oschina.net/p/tg-cms" target="_blank">糖果CMS（内容发布）</a></li>
+							<li>Google AdSense</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<!-- 企业文化 -->
+	<section id="processes" class="g-bg-dark-blue1">
+		<div class="container content-md g-text-height-md">
+
+			<div class="row g-mb-60 text-center g-heading-v7">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="h2 color-light">
+						<span class="g-text-height-lg">我们的优势</span>
+					</h2>
+					<p>"用做产品的态度做项目，用做服务的态度做产品！"</p>
+				</div>
+			</div>
+
+			<div class="row g-mb-20">
+				<div class="col-md-6 g-mb-20 steps-v1--lspace">
+					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
+						<li>
+							<h3 class="heading-sm h3">领先的专业技术</h3>
+						</li>
+						<li><p>采用主流先进领先技术</p></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-fire"></i> <img class="steps-v1__img g-rounded-50x" src="assets/img-temp/testimonials/img1.jpg" alt=""></li>
+					</ul>
+				</div>
+
+				<div class="col-md-6 steps-v1--rspace">
+					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
+						<li>
+							<h3 class="heading-sm h3">
+								<span>创新的解决方案</span>
+							</h3>
+						</li>
+						<li><p>突破常规的创新解决方案</p></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-energy"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img2.jpg" alt=""></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="row g-mb-50">
+				<div class="col-md-6 g-mb-20 steps-v1--lspace">
+					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
+						<li>
+							<h3 class="heading-sm h3">
+								<span>卓越的管理理念</span>
+							</h3>
+						</li>
+						<li><p>人性化的卓越管理理念</p></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-rocket"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img3.jpg" alt=""></li>
+					</ul>
+				</div>
+
+				<div class="col-md-6 steps-v1--rspace">
+					<ul class="list-unstyled steps-v1 g-bg-dark-blue2 g-no-mb">
+						<li>
+							<h3 class="heading-sm h3">
+								<span>完善的技术支持</span>
+							</h3>
+						</li>
+						<li><p>完善的技术支持</p></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-layers"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img4.jpg" alt=""></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Pricing -->
+	<section id="projects">
+		<div class="container content-md g-text-height-md">
+			<div class="row g-mb-60 text-center g-heading-v7">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="h2">
+						<span class="g-text-height-lg">Best Offers For You</span>
+					</h2>
+					<p>Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</p>
+				</div>
+			</div>
+
+		</div>
+		<div class="container-fluid g-text-height-md g-no-side-padding">
+			<ul class="list-unstyled owl2-carousel-v4 g-no-mb">
+				<li class="item">
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img1.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img2.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+				</li>
+				<li class="item">
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img4.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img3.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+				</li>
+				<li class="item">
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img6.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img5.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+				</li>
+				<li class="item">
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img7.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img4.jpg" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+
+	</section>
+	<!-- End Pricing -->
+
+
+	<!-- 典型客户 -->
+	<section id="clients">
+		<div class="container content-md g-text-height-md">
+			<div class="row g-mb-60 text-center g-heading-v7">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="h2">
+						<span class="g-text-height-lg">合作伙伴</span>
+					</h2>
+				</div>
+			</div>
+			<ul class="list-unstyled owl2-carousel-v3 g-mb-60">
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img1.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img2.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img3.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img4.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img5.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img6.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img7.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img8.png" alt=""></li>
+			</ul>
+			<div class="row text-center page-scroll">
+				<div class="col-sm-8 col-sm-offset-2">
+					<p>自公司创立以来，我们服务过的客户涵盖政府机关、行政事业单位、国企、民企凭借综合服务能力为客户带来最直接、最专业的沟通+咨询+信息化落地的整套服务方案。</p>
+					<br>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--/*******联系我们*******/-->
+	<section id="contact" class="g-bg-dark-blue1">
+		<div class="container content-md g-text-height-md">
+			<div class="row g-mb-60 text-center g-heading-v7">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="h2">
+						<span class="g-text-height-lg">联系我们</span>
+					</h2>
+					<p>感谢您的信赖与支持，您提出的需求我们会尽快回复。</p>
+					<p>我们可以并能够帮助您成就卓越！</p>
+				</div>
+			</div>
+			<!-- Contact Details -->
+			<ul class="list-unstyled row text-center">
+				<li class="col-md-3 contact-blocks-v1"><i class="contact-blocks-v1__icon g-display-block g-color-primary icon-call-in"></i>
+					<h4>电话</h4> <span class="g-display-block g-color-white">010-89942808</span></li>
+				<li class="col-md-3 contact-blocks-v1"><i class="contact-blocks-v1__icon g-display-block g-color-primary icon-envelope"></i>
+					<h4>Email</h4> <a href="mailto:service@turingoal.com"><span class="g-display-block g-color-white">service@turingoal.com</span></a></li>
+				<li class="col-md-3 contact-blocks-v1"><i class="contact-blocks-v1__icon g-display-block g-color-primary icon-earphones-alt"></i>
+					<h4>微博</h4> <a href="http://weibo.com/turingoal" target="_blank"><span class="g-display-block g-color-white">http://weibo.com/turingoal</span></a></li>
+				<li class="col-md-3 contact-blocks-v1"><i class="contact-blocks-v1__icon g-display-block g-color-primary icon-globe"></i>
+					<h4>地址</h4> <span class="g-display-block g-color-white">北京昌平紫晶七星广场515</span></li>
+			</ul>
+		</div>
+		<!--/*******版权信息*******/-->
 		<div th:replace="default/fragments/footer">footer</div>
-	</div>
-	<!--/<div th:replace="default/fragments/friendlink">friendlink</div> /-->
+	</section>
 </body>
 <div th:replace="default/fragments/import_js">import_js</div>
 </html>
