--- a/tg-cms/src/main/webapp/template/default/fragments/import_js.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/import_js.html
@@ -1,15 +1,12 @@
 ﻿<!--/*******底部引入js*******/-->
-<!-- JS Global Compulsory -->
 <script th:src="@{/template/default/_resources/vendor/jquery/jquery.min.js}"></script>
 <script th:src="@{/template/default/_resources/vendor/jquery/jquery-migrate.min.js}"></script>
 <script th:src="@{/template/default/_resources/vendor/bootstrap/js/bootstrap.min.js}"></script>
-<!-- JS Implementing Plugins -->
 <script th:src="@{/template/default/_resources/vendor/smoothScroll.js}"></script>
 <script th:src="@{/template/default/_resources/vendor/pace/pace.min.js}"></script>
 <script th:src="@{/template/default/_resources/vendor/jquery.parallax.js}"></script>
 <script th:src="@{/template/default/_resources/vendor/owl-carousel2/owl.carousel.min.js}"></script>
 <script th:src="@{/template/default/_resources/vendor/backstretch/jquery.backstretch.min.js}"></script>
-<!-- JS Page Level-->
 <script th:src="@{/template/default/_resources/js/one.app.js}"></script>
 <script th:src="@{/template/default/_resources/js/plugins/promo.js}"></script>
 <script th:src="@{/template/default/_resources/js/plugins/pace-loader.js}"></script>
@@ -27,6 +24,6 @@
     });
 </script>
 <!--[if lt IE 9]>
-  <script src="../assets/plugins/respond.js"></script>
-  <script src="../assets/plugins/html5shiv.js"></script>
-  <![endif]-->
+  <script src="_resources/vendor/respond.js"></script>
+  <script src="_resources/vendor/html5shiv.js"></script>
+<![endif]-->
