常规维护 暂时不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -7,7 +7,7 @@
 <body id="body" data-spy="scroll" data-target=".one-page-header">
 	<!--/*******导航栏*******/-->
 	<div th:replace="default/fragments/nav">head</div>
-	<!-- 幻灯片 -->
+	<!--/*******幻灯片*******/-->
 	<section class="g-bg-dark-blue1">
 		<div class="fullscreen-static-image promo-block--cover fullheight">
 			<div class="container valign__middle">
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- 主要业务 -->
+	<!--/*******主要业务*******/-->
 	<section id="services">
 		<div class="container content-md g-text-height-md">
 			<div class="row g-mb-60 text-center g-heading-v7">
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- 企业文化 -->
+	<!--/*******企业文化 *******/-->
 	<section id="processes" class="g-bg-dark-blue1">
 		<div class="container content-md g-text-height-md">
 			<div class="row g-mb-60 text-center g-heading-v7">
@@ -148,7 +148,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- 典型案例 -->
+	<!--/*******典型案例  *******/-->
 	<section id="projects">
 		<div class="container content-md g-text-height-md">
 			<div class="row g-mb-60 text-center g-heading-v7">
@@ -229,8 +229,7 @@
 			</ul>
 		</div>
 	</section>
-	<!-- End Pricing -->
-	<!-- 典型客户 -->
+	<!--/******* 合作伙伴  *******/-->
 	<section id="clients">
 		<div class="container content-md g-text-height-md">
 			<div class="row g-mb-60 text-center g-heading-v7">
