常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/fragments/nav.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/nav.html
@@ -5,7 +5,7 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 				<span class="sr-only">导航按钮</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#body"> <img class="img-responsive" th:href="@{/template/default/_resources/imgs/logo_w.png}" alt="图灵谷">
+			<a class="navbar-brand" href="#body"> <img class="img-responsive" th:src="@{/template/default/_resources/imgs/logo_w.png}" alt="图灵谷">
 			</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
