常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -164,30 +164,14 @@
 			<ul class="list-unstyled owl2-carousel-v4 g-no-mb">
 				<li class="item">
 					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img1.jpg" alt="">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img1.jpg}" alt="">
 						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
 							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
 							</span>
 						</div>
 					</div>
 					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img2.jpg" alt="">
-						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
-							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
-							</span>
-						</div>
-					</div>
-				</li>
-				<li class="item">
-					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img4.jpg" alt="">
-						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
-							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
-							</span>
-						</div>
-					</div>
-					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img3.jpg" alt="">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img2.jpg}" alt="">
 						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
 							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
 							</span>
@@ -196,14 +180,14 @@
 				</li>
 				<li class="item">
 					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img6.jpg" alt="">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img4.jpg}" alt="">
 						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
 							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
 							</span>
 						</div>
 					</div>
 					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img5.jpg" alt="">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img3.jpg}" alt="">
 						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
 							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
 							</span>
@@ -212,14 +196,30 @@
 				</li>
 				<li class="item">
 					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img7.jpg" alt="">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img6.jpg}" alt="">
 						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
 							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
 							</span>
 						</div>
 					</div>
 					<div class="owl2-carousel-v2__item">
-						<img class="img-responsive owl2-carousel-v2__item-img" src="assets/img-temp/news/img4.jpg" alt="">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img5.jpg}" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+				</li>
+				<li class="item">
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img7.jpg}" alt="">
+						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
+							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
+							</span>
+						</div>
+					</div>
+					<div class="owl2-carousel-v2__item">
+						<img class="img-responsive owl2-carousel-v2__item-img" th:src="@{/template/default/_resources/img-temp/news/img4.jpg}" alt="">
 						<div class="owl2-carousel-v2__item-info owl2-carousel-v2__item-info--news">
 							<span class="owl2-carousel-v2__item-info__item"> <em>May 20, 2016</em> <span>MASTER CLASS OF THE WEEK</span> <em>By Kate Lee for Business</em>
 							</span>
@@ -240,14 +240,14 @@
 				</div>
 			</div>
 			<ul class="list-unstyled owl2-carousel-v3 g-mb-60">
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img1.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img2.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img3.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img4.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img5.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img6.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img7.png" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img src="assets/img-temp/clients/img8.png" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img1.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img2.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img3.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img4.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img5.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img6.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img7.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img8.png}" alt=""></li>
 			</ul>
 			<div class="row text-center page-scroll">
 				<div class="col-sm-8 col-sm-offset-2">
