常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -90,7 +90,7 @@
 		</div>
 	</section>
 	<!--/*******企业文化 *******/-->
-	<section id="processes" class="g-bg-dark-blue1">
+	<section id="culture" class="g-bg-dark-blue1">
 		<div class="container content-md g-text-height-md">
 			<div class="row g-mb-60 text-center g-heading-v7">
 				<div class="col-sm-8 col-sm-offset-2">
@@ -235,19 +235,17 @@
 			<div class="row g-mb-60 text-center g-heading-v7">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="h2">
-						<span class="g-text-height-lg">合作伙伴</span>
+						<span class="g-text-height-lg">合作伙伴及服务单位</span>
 					</h2>
 				</div>
 			</div>
 			<ul class="list-unstyled owl2-carousel-v3 g-mb-60">
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img1.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img2.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img3.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img4.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img5.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img6.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img7.png}" alt=""></li>
-				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/img-temp/clients/img8.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/imgs/temp/zhongping.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/imgs/temp/zhongwen.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/imgs/temp/zhishang.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/imgs/temp/cec.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/imgs/temp/jiaotongbu.png}" alt=""></li>
+				<li class="item owl2-carousel-v3__item"><img th:src="@{/template/default/_resources/imgs/temp/minzhengbu.png}" alt=""></li>
 			</ul>
 			<div class="row text-center page-scroll">
 				<div class="col-sm-8 col-sm-offset-2">
