--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
@@ -86,7 +86,7 @@
 						</a>
 					</dd>
 					<dd th:classappend="${child=='guestbookType'} ? 'layui-this'">
-						<a th:href="@{/admin/m/ext/guestbookType/list.gsp}"> <i class="layui-icon">&&#xe638;</i><cite> 留言板类型 </cite>
+						<a th:href="@{/admin/m/ext/guestbookType/list.gsp}"> <i class="layui-icon">&#xe638;</i><cite> 留言板类型 </cite>
 						</a>
 					</dd>
 					<dd th:classappend="${child=='friendlinkType'} ? 'layui-this'">
