--- a/tg-cms/src/main/webapp/template/default/fragments/nav.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/nav.html
@@ -14,7 +14,7 @@
 					<li class="page-scroll home"><a href="#body"><span data-hover="Turingoal">图灵谷科技</span></a></li>
 					<li class="page-scroll"><a href="#services"><span data-hover="Services">主要业务</span></a></li>
 					<li class="page-scroll"><a href="#culture"><span data-hover="Culture">企业文化</span></a></li>
-					<li class="page-scroll"><a href="#projects"><span data-hover="Projects">典型案例</span></a></li>
+					<!--/*<li class="page-scroll"><a href="#projects"><span data-hover="Projects">典型案例</span></a></li>*/-->
 					<li class="page-scroll"><a href="#clients"><span data-hover="Clients">合作伙伴</span></a></li>
 					<li class="page-scroll"><a href="#contact"><span data-hover="Contact">联系我们</span></a></li>
 				</ul>
