常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -53,10 +53,10 @@
 						<h2 class="heading-sm h3">系统集成</h2>
 						<p>信息系统集成</p>
 						<ul class="list-unstyled">
-							<li>Analysis &amp; Consulting</li>
-							<li>Email Marketing</li>
-							<li>App &amp; Icon Design</li>
-							<li>Social Networking</li>
+							<li>音视频技术服务</li>
+							<li>安防监控</li>
+							<li>会议室、多功能厅</li>
+							<li>剧场、剧院设计</li>
 						</ul>
 					</div>
 				</div>
@@ -66,10 +66,10 @@
 						<h2 class="heading-sm h3">互联网推广</h2>
 						<p>网络推广</p>
 						<ul class="list-unstyled">
-							<li>Display Advertising</li>
-							<li>App &amp; Icon Design</li>
-							<li>Analysis &amp; Consulting</li>
-							<li>Social Media</li>
+							<li>网站建设</li>
+							<li>SEO优化</li>
+							<li>网络营销</li>
+							<li>广告代理</li>
 						</ul>
 					</div>
 				</div>
@@ -82,7 +82,7 @@
 							<li>17企航（企业管理平台）</li>
 							<li>时间沙漏（兴趣设计平台）</li>
 							<li><a href="https://www.oschina.net/p/tg-cms" target="_blank">糖果CMS（内容发布）</a></li>
-							<li>Google AdSense</li>
+							<li>图灵谷“奠基”开发平台</li>
 						</ul>
 					</div>
 				</div>
