常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -15,7 +15,7 @@
 					<div class="col-sm-8 col-sm-offset-2 text-center">
 						<div class="promo-block__item page-scroll animated fadeIn">
 							<span class="g-display-block g-mb-10">领先技术，铸就卓越！</span>
-							<h2 class="promo-block__item-text g-mb-20">领先技术，铸就卓越！</h2>
+							<h2 class="promo-block__item-text g-mb-20">用科技为您创造价值！</h2>
 							<a href="#services" class="btn-u btn-brd btn-brd-hover btn-u-light">查看更多</a>
 						</div>
 					</div>
@@ -64,7 +64,7 @@
 					<div class="service-block service-block-default equal-height-column no-margin-bottom">
 						<i class="icon icon-layers"></i>
 						<h2 class="heading-sm h3">互联网推广</h2>
-						<p>网络推广</p>
+						<p>互联网营销推广</p>
 						<ul class="list-unstyled">
 							<li>网站建设</li>
 							<li>SEO优化</li>
@@ -77,11 +77,11 @@
 					<div class="service-block service-block-default equal-height-column no-margin-bottom">
 						<i class="icon icon-social-youtube"></i>
 						<h2 class="heading-sm h3">自有产品</h2>
-						<p>自有产品</p>
+						<p>自有产品及平台</p>
 						<ul class="list-unstyled">
 							<li>17企航（企业管理平台）</li>
-							<li>时间沙漏（兴趣设计平台）</li>
-							<li><a href="https://www.oschina.net/p/tg-cms" target="_blank">糖果CMS（内容发布）</a></li>
+							<li>时间沙漏（兴趣社交平台）</li>
+							<li>糖果CMS（内容发布）</li>
 							<li>图灵谷“奠基”开发平台</li>
 						</ul>
 					</div>
@@ -106,7 +106,7 @@
 						<li>
 							<h3 class="heading-sm h3">领先的专业技术</h3>
 						</li>
-						<li><p>采用主流先进领先技术</p></li>
+						<li><p>采用主流先进领先技术，保持行业领先</p></li>
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-fire"></i> <img class="steps-v1__img g-rounded-50x" src="assets/img-temp/testimonials/img1.jpg" alt=""></li>
 					</ul>
 				</div>
@@ -117,7 +117,7 @@
 								<span>创新的解决方案</span>
 							</h3>
 						</li>
-						<li><p>突破常规的创新解决方案</p></li>
+						<li><p>突破常规的创新解决方案，更加简单有效</p></li>
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-energy"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img2.jpg" alt=""></li>
 					</ul>
 				</div>
@@ -130,7 +130,7 @@
 								<span>卓越的管理理念</span>
 							</h3>
 						</li>
-						<li><p>人性化的卓越管理理念</p></li>
+						<li><p>人性化的管理理念，以人为本</p></li>
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-rocket"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img3.jpg" alt=""></li>
 					</ul>
 				</div>
@@ -141,7 +141,7 @@
 								<span>完善的技术支持</span>
 							</h3>
 						</li>
-						<li><p>完善的技术支持</p></li>
+						<li><p>完善的技术支持，强力后盾</p></li>
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-layers"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img4.jpg" alt=""></li>
 					</ul>
 				</div>
@@ -183,8 +183,7 @@
 					<h2 class="h2">
 						<span class="g-text-height-lg">联系我们</span>
 					</h2>
-					<p>感谢您的信赖与支持，您提出的需求我们会尽快回复。</p>
-					<p>我们可以并能够帮助您成就卓越！</p>
+					<p>感谢您的信赖与支持，期待与您的更进一步交流......</p>
 				</div>
 			</div>
 			<!-- Contact Details -->
