常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -107,7 +107,7 @@
 							<h3 class="heading-sm h3">领先的专业技术</h3>
 						</li>
 						<li><p>采用主流先进领先技术，保持行业领先</p></li>
-						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-fire"></i> <img class="steps-v1__img g-rounded-50x" src="assets/img-temp/testimonials/img1.jpg" alt=""></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-fire"></i> <img class="steps-v1__img g-rounded-50x" th:src="@{/template/default/_resources/imgs/temp/item.png}" alt=""></li>
 					</ul>
 				</div>
 				<div class="col-md-6 steps-v1--rspace">
@@ -118,7 +118,7 @@
 							</h3>
 						</li>
 						<li><p>突破常规的创新解决方案，更加简单有效</p></li>
-						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-energy"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img2.jpg" alt=""></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-energy"></i> <img class="steps-v1__img img-responsive g-rounded-50x" th:src="@{/template/default/_resources/imgs/temp/item.png}" alt=""></li>
 					</ul>
 				</div>
 			</div>
@@ -131,7 +131,7 @@
 							</h3>
 						</li>
 						<li><p>人性化的管理理念，以人为本</p></li>
-						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-rocket"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img3.jpg" alt=""></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-rocket"></i> <img class="steps-v1__img img-responsive g-rounded-50x" th:src="@{/template/default/_resources/imgs/temp/item.png}" alt=""></li>
 					</ul>
 				</div>
 				<div class="col-md-6 steps-v1--rspace">
@@ -142,7 +142,7 @@
 							</h3>
 						</li>
 						<li><p>完善的技术支持，强力后盾</p></li>
-						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-layers"></i> <img class="steps-v1__img img-responsive g-rounded-50x" src="assets/img-temp/testimonials/img4.jpg" alt=""></li>
+						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-layers"></i> <img class="steps-v1__img img-responsive g-rounded-50x" th:src="@{/template/default/_resources/imgs/temp/item.png}" alt=""></li>
 					</ul>
 				</div>
 			</div>
@@ -169,7 +169,7 @@
 			</ul>
 			<div class="row text-center page-scroll">
 				<div class="col-sm-8 col-sm-offset-2">
-					<p>自公司创立以来，我们服务过的客户涵盖政府机关、行政事业单位、国企、民企凭借综合服务能力为客户带来最直接、最专业的沟通+咨询+信息化落地的整套服务方案。</p>
+					<p>自创立以来，我们服务过的客户涵盖政府机关、行政事业单位、国企、民企等。凭借综合服务能力为客户带来最直接、最专业的沟通+咨询+信息化落地的整套服务方案。</p>
 					<br>
 				</div>
 			</div>
