常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/default/index.html
+++ b/tg-cms/src/main/webapp/template/default/index.html
@@ -106,7 +106,7 @@
 						<li>
 							<h3 class="heading-sm h3">领先的专业技术</h3>
 						</li>
-						<li><p>采用主流先进领先技术，保持行业领先</p></li>
+						<li><p>采用主流先进技术，保持行业领先</p></li>
 						<li class="steps-v1__block g-rounded-50x"><i class="steps-v1__icon icon-fire"></i> <img class="steps-v1__img g-rounded-50x" th:src="@{/template/default/_resources/imgs/temp/item.png}" alt=""></li>
 					</ul>
 				</div>
