--- a/tg-cms/src/main/webapp/template/default/fragments/head.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/head.html
@@ -4,7 +4,7 @@
 <meta name="renderer" content="webkit" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="Keywords" content="图灵谷,turingoal,软件,开发,系统集成,音视频,政务系统,法务系统,移动互联网,网络推广" />
-<meta name="Description" content="图灵谷（北京）科技有限公司致力于领先技术研究，通过创新技术改进生产力，为企企事业单位、政府机构等提供更先进的解决方案和更完善的服务体系" />
+<meta name="Description" content="图灵谷（北京）科技有限公司致力于领先技术研究，通过创新技术改进生产力，为企企事业单位、政府机构等提供更先进的解决方案和更完善的服务" />
 <meta name="author" content="图灵谷（北京）科技有限公司">
 <!--/* 浏览器标题栏小图标favicon */-->
 <link rel="shortcut icon" type="image/x-icon" th:href="@{/template/default/_resources/imgs/favicon.ico}" />
